# stare_at_tables

./: CMakeLists.txt  README.md  get_pose.py  move_around_table.py  package.xml  sasha_lab.txt
action/: StareAtTables.action
scripts/: move_around_table.py
