<?xml version="1.0"?>
<package format="2">
  <name>stare_at_tables</name>
  <version>0.0.0</version>
  <description>The stare_at_tables package</description>

  <maintainer email="markus.j.leitner@tuwien.ac.at">Markus Leitner</maintainer>

  <license>BSD</license>
  
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>hsrb_interface_py</depend>
  <depend>table_extractor</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
